--- a/BlazorTasks/Ex1LoginExample/Pages/Adults.razor
+++ b/BlazorTasks/Ex1LoginExample/Pages/Adults.razor
@@ -96,14 +96,14 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        allAdults = InjectedAdultData.GetAdults();
+        allAdults = await InjectedAdultData.GetAdultsAsync();
         adultsToShow = allAdults;
     }
     
     private void RemoveAdult(int adultId)
     {
         Adult adultToRemove = allAdults.First(t => t.Id == adultId);
-        InjectedAdultData.RemoveAdult(adultId);
+        InjectedAdultData.RemoveAdultAsync(adultId);
         allAdults.Remove(adultToRemove);
         adultsToShow.Remove(adultToRemove);
     }
