--- a/BlazorTasks/Ex1LoginExample/Pages/Edit.razor
+++ b/BlazorTasks/Ex1LoginExample/Pages/Edit.razor
@@ -9,50 +9,52 @@
 {
     <em>Adult does not exist</em>
 }
-<EditForm Model="@adultToEdit" OnValidSubmit="@Save">
-    <DataAnnotationsValidator/>
-    <ValidationSummary/> 
-   <div class="form-group">Job title<br/>
-                       <InputTextArea @bind-Value="adultToEdit.JobPosition.JobTitle"/>
-                   </div>
-           
-                   <div class="form-group">Salary<br/>
-                       <InputNumber @bind-Value="adultToEdit.JobPosition.Salary"/>
-                   </div>
-           
-                   <div class="form-group">ID <br/>
-                       <InputNumber @bind-Value="adultToEdit.Id"/>
-                   </div>
-           
-                   <div class="form-group">Firstname<br/>
-                       <InputTextArea @bind-Value="adultToEdit.FirstName"/>
-                   </div>
-           
-                   <div class="form-group">Lastname<br/>
-                       <InputTextArea @bind-Value="adultToEdit.LastName"/>
-                   </div>
-           
-                   <div class="form-group">Haircolor<br/>
-                       <InputTextArea @bind-Value="adultToEdit.HairColor"/>
-                   </div>
-           
-                  
-           
-                   <div class="form-group">Weight<br/>
-                       <InputNumber @bind-Value="adultToEdit.Weight"/>
-                   </div>
-           
-                   <div class="form-group">Height<br/>
-                       <InputNumber @bind-Value="adultToEdit.Height"/>
-                   </div>
-           
-    <p class="actions">
-        <button class="btn btn-outline-dark" type="submit">Save</button>
-    </p>
-    
-    
-</EditForm>
+else
+{
+    <EditForm Model="@adultToEdit" OnValidSubmit="@Save">
+        <DataAnnotationsValidator/>
+        <ValidationSummary/>
+        <div class="form-group">Job title<br/>
+            <InputTextArea @bind-Value="adultToEdit.JobPosition.JobTitle"/>
+        </div>
 
+        <div class="form-group">Salary<br/>
+            <InputNumber @bind-Value="adultToEdit.JobPosition.Salary"/>
+        </div>
+
+        <div class="form-group">ID <br/>
+            <InputNumber @bind-Value="adultToEdit.Id"/>
+        </div>
+
+        <div class="form-group">Firstname<br/>
+            <InputTextArea @bind-Value="adultToEdit.FirstName"/>
+        </div>
+
+        <div class="form-group">Lastname<br/>
+            <InputTextArea @bind-Value="adultToEdit.LastName"/>
+        </div>
+
+        <div class="form-group">Haircolor<br/>
+            <InputTextArea @bind-Value="adultToEdit.HairColor"/>
+        </div>
+
+
+
+        <div class="form-group">Weight<br/>
+            <InputNumber @bind-Value="adultToEdit.Weight"/>
+        </div>
+
+        <div class="form-group">Height<br/>
+            <InputNumber @bind-Value="adultToEdit.Height"/>
+        </div>
+
+        <p class="actions">
+            <button class="btn btn-outline-dark" type="submit">Save</button>
+        </p>
+
+
+    </EditForm>
+}
 @code {
     [Parameter]
     public int Id { get; set; }
@@ -61,12 +63,12 @@
     
     protected override async Task OnInitializedAsync()
     {
-        adultToEdit = InjectedAdultData.Get(Id);
+        adultToEdit = await InjectedAdultData.Get(Id);
     }
 
     private void Save()
     {
-        InjectedAdultData.UpdateAdult(adultToEdit);
+        InjectedAdultData.UpdateAdultAsync(adultToEdit);
         NavMgr.NavigateTo("/Adults");
     }
 }
